k8_config_example/vite_base/vite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callcode-session-s1
  labels:
    app: callcode
    session-id: s1
spec:
  type: NodePort
  selector:
    app: callcode 
    session-id: s1
    user-id: u1
  ports:
  - name: service-port
    port: 80
    targetPort: 5173
  - name: websocket-port
    port: 8080
    targetPort: 8080
