k8_config_example/vite_base/vite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callcode-session-s1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: s1.call-code.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: callcode-session-s1
            port:
              number: 80
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: callcode-session-s1
            port:
              number: 8080
